Made simple Differentiate and Siplify functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ include_directories(include)
 
 add_executable(Diff
         include/Diff.h
+        include/Diff_DSL.h
         src/Diff_Dump.cpp
         src/Diff_Main.cpp
+        src/Diff_Errors_Func.cpp
+        src/Diff_Text_Func.cpp
+        src/Diff_Differentiate_Func.cpp
         src/Diff_Tree_Func.cpp)
