Made final (already) tex dump

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,6 @@ add_executable(Diff
         src/Diff_Dump.cpp
         src/Diff_Main.cpp
         src/Diff_Errors_Func.cpp
-        src/Diff_Text_Func.cpp
+        src/Diff_File&Text_Func.cpp
         src/Diff_Differentiate_Func.cpp
         src/Diff_Tree_Func.cpp)
